--- a/css/ie/v9.css
+++ b/css/ie/v9.css
@@ -35,7 +35,7 @@
 						url('../images/bgbl.svg') bottom left no-repeat,
 						url('../images/bgbl.svg') bottom left no-repeat,
 						url('../images/overlay.png'),
-						url('images/content-style1.svg');
+						url('images/221s.PNG');
 		}
 
 		.main > .content.style2
@@ -44,7 +44,7 @@
 						url('../images/bgbl.svg') bottom left no-repeat,
 						url('../images/bgbl.svg') bottom left no-repeat,
 						url('../images/overlay.png'),
-						url('images/content-style2.svg');
+						url('images/221s.PNG');
 		}
 
 		.main > .content.style3
@@ -53,5 +53,5 @@
 						url('../images/bgbl.svg') bottom left no-repeat,
 						url('../images/bgbl.svg') bottom left no-repeat,
 						url('../images/overlay.png'),
-						url('images/content-style3.svg');
+						url('images/221s.PNG');
 		}
