--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@
 				top: 0;
 				width: 100%;
 				height: 100%;
-				background: url('images/overlay.png');
+				background: url('images/221s.PNG');
 			}
 		
 			.image img
